Ticket #946: collapsed webform spacing and fix bleeding button styles.

--- a/sites/all/themes/doit/sass/partials/03-defaults/markup/forms/_form-defaults.sass
+++ b/sites/all/themes/doit/sass/partials/03-defaults/markup/forms/_form-defaults.sass
@@ -48,6 +48,10 @@ html.js input.form-autocomplete
 html.js input.throbbing
   background-position: 100% -13px
 
+// Height for collapsed fieldset
+html.js fieldset.collapsed
+  height: 3em
+
 input
   &[type=text], &[type=password], &[type=email], &[type=url], &[type=tel],
   &[type=date], &[type=datetime], &[type=datetime-local], &[type=month], &[type=week], &[type=time],
