--- a/sites/all/themes/doit/sass/partials/03-defaults/markup/forms/_form-multi-step.sass
+++ b/sites/all/themes/doit/sass/partials/03-defaults/markup/forms/_form-multi-step.sass
@@ -1,6 +1,6 @@
 /* Specific styling for multi-step Forms specific for project right now--------------------------------------------------------------
 
-form[enctype="multipart/form-data"]
+form.webform-client-form
   // Float multi-step webform buttons right
   #edit-actions
     height: 50px
@@ -20,6 +20,9 @@ form[enctype="multipart/form-data"]
     margin-left: $s-2
     padding: 0
     width: 45px
+
+  #edit-submit
+    margin-left: $s-2
 
   // Save as draft link
   #edit-draft
